--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,12 +163,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="503. next-greater-element-ii.cpp" />
-    <ClCompile Include="508. most-frequent-subtree-sum.cpp" />
-    <ClCompile Include="516. longest-palindromic-subsequence.cpp" />
-    <ClCompile Include="518. coin-change-2.cpp" />
-    <ClCompile Include="519. random-flip-matrix.cpp" />
-    <ClCompile Include="522. longest-uncommon-subsequence-ii.cpp" />
+    <ClCompile Include="523. continuous-subarray-sum.cpp" />
+    <ClCompile Include="524. longest-word-in-dictionary-through-deleting.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
