--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="528. random-pick-with-weight.cpp" />
-    <ClCompile Include="535. encode-and-decode-tinyurl.cpp" />
-    <ClCompile Include="537. complex-number-multiplication.cpp" />
-    <ClCompile Include="539. minimum-time-difference.cpp" />
+    <ClCompile Include="540. single-element-in-a-sorted-array.cpp" />
+    <ClCompile Include="547. friend-circles.cpp" />
+    <ClCompile Include="553. optimal-division.cpp" />
+    <ClCompile Include="554. brick-wall.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
