--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -44,16 +44,16 @@
     <ClCompile Include="commonalg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="528. random-pick-with-weight.cpp">
+    <ClCompile Include="540. single-element-in-a-sorted-array.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="535. encode-and-decode-tinyurl.cpp">
+    <ClCompile Include="547. friend-circles.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="537. complex-number-multiplication.cpp">
+    <ClCompile Include="553. optimal-division.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="539. minimum-time-difference.cpp">
+    <ClCompile Include="554. brick-wall.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
