--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,10 +163,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="5173. prime-arrangements.cpp" />
-    <ClCompile Include="5174. diet-plan-performance.cpp" />
-    <ClCompile Include="556. next-greater-element-iii.cpp" />
-    <ClCompile Include="560. subarray-sum-equals-k.cpp" />
+    <ClCompile Include="565. array-nesting.cpp" />
+    <ClCompile Include="567. permutation-in-string.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
