--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -163,8 +163,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="565. array-nesting.cpp" />
-    <ClCompile Include="567. permutation-in-string.cpp" />
+    <ClCompile Include="5067. count-substrings-with-only-one-distinct-letter.cpp" />
+    <ClCompile Include="5068. before-and-after-puzzle.cpp" />
+    <ClCompile Include="5070. shortest-distance-to-target-color.cpp" />
+    <ClCompile Include="5082. maximum-number-of-ones.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
