--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -170,6 +170,19 @@
     <ClCompile Include="55. Jump Game.cpp" />
     <ClCompile Include="56. Merge Intervals.cpp" />
     <ClCompile Include="57. Insert Interval.cpp" />
+    <ClCompile Include="58. Length of Last Word.cpp" />
+    <ClCompile Include="59. Spiral Matrix II.cpp" />
+    <ClCompile Include="60. Permutation Sequence.cpp" />
+    <ClCompile Include="61. Rotate List.cpp" />
+    <ClCompile Include="62. Unique Paths.cpp" />
+    <ClCompile Include="63. Unique Paths II.cpp" />
+    <ClCompile Include="64. Minimum Path Sum.cpp" />
+    <ClCompile Include="65. Valid Number.cpp" />
+    <ClCompile Include="66. Plus One.cpp" />
+    <ClCompile Include="67. Add Binary.cpp" />
+    <ClCompile Include="68. Text Justification.cpp" />
+    <ClCompile Include="69. Sqrt(x).cpp" />
+    <ClCompile Include="70. Climbing Stairs.cpp" />
     <ClCompile Include="commonalg.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
