--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -31,6 +31,18 @@
     <Filter Include="源文件\BinarySearch">
       <UniqueIdentifier>{7b10e0cb-4e91-4d32-835a-b67799f13bf6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\Math">
+      <UniqueIdentifier>{90a034f1-3b7a-4aab-8a39-fe3918917282}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\ListNode">
+      <UniqueIdentifier>{525430d1-e701-4f78-b6ad-79978bf5eee9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\DP">
+      <UniqueIdentifier>{ba7f2075-88de-46f8-ad5e-82b886ad4f4b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\FiniteStateMachine">
+      <UniqueIdentifier>{39bba9b0-e33d-47f9-ad57-48468037b9d4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -82,6 +94,45 @@
     </ClCompile>
     <ClCompile Include="57. Insert Interval.cpp">
       <Filter>源文件\BinarySearch</Filter>
+    </ClCompile>
+    <ClCompile Include="58. Length of Last Word.cpp">
+      <Filter>源文件\BruteForce</Filter>
+    </ClCompile>
+    <ClCompile Include="60. Permutation Sequence.cpp">
+      <Filter>源文件\Math</Filter>
+    </ClCompile>
+    <ClCompile Include="61. Rotate List.cpp">
+      <Filter>源文件\ListNode</Filter>
+    </ClCompile>
+    <ClCompile Include="62. Unique Paths.cpp">
+      <Filter>源文件\DP</Filter>
+    </ClCompile>
+    <ClCompile Include="63. Unique Paths II.cpp">
+      <Filter>源文件\DP</Filter>
+    </ClCompile>
+    <ClCompile Include="64. Minimum Path Sum.cpp">
+      <Filter>源文件\DP</Filter>
+    </ClCompile>
+    <ClCompile Include="70. Climbing Stairs.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="65. Valid Number.cpp">
+      <Filter>源文件\FiniteStateMachine</Filter>
+    </ClCompile>
+    <ClCompile Include="59. Spiral Matrix II.cpp">
+      <Filter>源文件\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="67. Add Binary.cpp">
+      <Filter>源文件\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="66. Plus One.cpp">
+      <Filter>源文件\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="68. Text Justification.cpp">
+      <Filter>源文件\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="69. Sqrt(x).cpp">
+      <Filter>源文件\Math</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
