--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -13,40 +13,58 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="源文件\BackTrack">
-      <UniqueIdentifier>{80b54529-6d82-477a-a73e-9a45a6af5831}</UniqueIdentifier>
+    <Filter Include="源文件\CommonAlg">
+      <UniqueIdentifier>{3e1984bf-4c67-45e6-8a03-05ef84a91da4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\BruteForce">
-      <UniqueIdentifier>{be92d73b-fb77-4431-b24e-a855dd520294}</UniqueIdentifier>
+    <Filter Include="源文件\CommonAlg\DFS">
+      <UniqueIdentifier>{ab71c7e8-783c-4e46-95c7-ce6f2623d82c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\Simulation">
-      <UniqueIdentifier>{02b73f87-d061-4051-9fbf-d81f1f1aa402}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\Greedy">
+    <Filter Include="源文件\CommonAlg\Greedy">
       <UniqueIdentifier>{034aaa22-8053-42e7-b5fe-f2641fffa621}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\SortPreTreat">
-      <UniqueIdentifier>{70097c84-60c2-4448-b7bc-d7b133bd32c9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\BinarySearch">
-      <UniqueIdentifier>{7b10e0cb-4e91-4d32-835a-b67799f13bf6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\Math">
-      <UniqueIdentifier>{90a034f1-3b7a-4aab-8a39-fe3918917282}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\ListNode">
-      <UniqueIdentifier>{525430d1-e701-4f78-b6ad-79978bf5eee9}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="源文件\DP">
+    <Filter Include="源文件\CommonAlg\DP">
       <UniqueIdentifier>{ba7f2075-88de-46f8-ad5e-82b886ad4f4b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\FiniteStateMachine">
+    <Filter Include="源文件\CommonAlg\BinarySearch">
+      <UniqueIdentifier>{7b10e0cb-4e91-4d32-835a-b67799f13bf6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\CommonAlg\BackTrack">
+      <UniqueIdentifier>{80b54529-6d82-477a-a73e-9a45a6af5831}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\EasyAlg">
+      <UniqueIdentifier>{87b854a6-93db-4f11-b3b9-1e36949a4b2a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\EasyAlg\BruteForce">
+      <UniqueIdentifier>{be92d73b-fb77-4431-b24e-a855dd520294}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\EasyAlg\FiniteStateMachine">
       <UniqueIdentifier>{39bba9b0-e33d-47f9-ad57-48468037b9d4}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\Stack">
+    <Filter Include="源文件\EasyAlg\Simulation">
+      <UniqueIdentifier>{02b73f87-d061-4051-9fbf-d81f1f1aa402}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\CommonAlg\SlidingWindow">
+      <UniqueIdentifier>{6a2e1eb5-53dd-45c4-955f-9e80ee1f4eb3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\CommonAlg\SortPreTreat">
+      <UniqueIdentifier>{70097c84-60c2-4448-b7bc-d7b133bd32c9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\CommonAlg\Stack">
       <UniqueIdentifier>{430fbc75-0c6a-4bcf-bd37-d3d7271a7acb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="源文件\Special">
+    <Filter Include="源文件\SpecialAlg">
+      <UniqueIdentifier>{649445af-6b8a-40c4-a522-702d93739ad5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\SpecialAlg\Math">
+      <UniqueIdentifier>{90a034f1-3b7a-4aab-8a39-fe3918917282}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\SpecialAlg\ListNode">
+      <UniqueIdentifier>{525430d1-e701-4f78-b6ad-79978bf5eee9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\SpecialAlg\BitOperation">
+      <UniqueIdentifier>{588c88c0-0730-4a58-b8bc-34866b633a2b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\SpecialAlg\Special">
       <UniqueIdentifier>{bdd84835-974b-4b05-864f-f8d46a23b355}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -81,79 +99,109 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="51. N-Queens.cpp">
-      <Filter>源文件\BackTrack</Filter>
+      <Filter>源文件\CommonAlg\BackTrack</Filter>
     </ClCompile>
     <ClCompile Include="52. N-Queens II.cpp">
-      <Filter>源文件\BackTrack</Filter>
+      <Filter>源文件\CommonAlg\BackTrack</Filter>
     </ClCompile>
     <ClCompile Include="53. Maximum Subarray.cpp">
-      <Filter>源文件\BruteForce</Filter>
+      <Filter>源文件\EasyAlg\BruteForce</Filter>
     </ClCompile>
     <ClCompile Include="54. Spiral Matrix.cpp">
-      <Filter>源文件\Simulation</Filter>
+      <Filter>源文件\EasyAlg\Simulation</Filter>
     </ClCompile>
     <ClCompile Include="55. Jump Game.cpp">
-      <Filter>源文件\Greedy</Filter>
+      <Filter>源文件\CommonAlg\Greedy</Filter>
     </ClCompile>
     <ClCompile Include="56. Merge Intervals.cpp">
-      <Filter>源文件\SortPreTreat</Filter>
+      <Filter>源文件\CommonAlg\SortPreTreat</Filter>
     </ClCompile>
     <ClCompile Include="57. Insert Interval.cpp">
-      <Filter>源文件\BinarySearch</Filter>
+      <Filter>源文件\CommonAlg\BinarySearch</Filter>
     </ClCompile>
     <ClCompile Include="58. Length of Last Word.cpp">
-      <Filter>源文件\BruteForce</Filter>
+      <Filter>源文件\EasyAlg\BruteForce</Filter>
     </ClCompile>
     <ClCompile Include="60. Permutation Sequence.cpp">
-      <Filter>源文件\Math</Filter>
+      <Filter>源文件\SpecialAlg\Math</Filter>
     </ClCompile>
     <ClCompile Include="61. Rotate List.cpp">
-      <Filter>源文件\ListNode</Filter>
+      <Filter>源文件\SpecialAlg\ListNode</Filter>
     </ClCompile>
     <ClCompile Include="62. Unique Paths.cpp">
-      <Filter>源文件\DP</Filter>
+      <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
     <ClCompile Include="63. Unique Paths II.cpp">
-      <Filter>源文件\DP</Filter>
+      <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
     <ClCompile Include="64. Minimum Path Sum.cpp">
-      <Filter>源文件\DP</Filter>
+      <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
     <ClCompile Include="65. Valid Number.cpp">
-      <Filter>源文件\FiniteStateMachine</Filter>
+      <Filter>源文件\EasyAlg\FiniteStateMachine</Filter>
     </ClCompile>
     <ClCompile Include="59. Spiral Matrix II.cpp">
-      <Filter>源文件\Simulation</Filter>
+      <Filter>源文件\EasyAlg\Simulation</Filter>
     </ClCompile>
     <ClCompile Include="67. Add Binary.cpp">
-      <Filter>源文件\Simulation</Filter>
+      <Filter>源文件\EasyAlg\Simulation</Filter>
     </ClCompile>
     <ClCompile Include="66. Plus One.cpp">
-      <Filter>源文件\Simulation</Filter>
+      <Filter>源文件\EasyAlg\Simulation</Filter>
     </ClCompile>
     <ClCompile Include="68. Text Justification.cpp">
-      <Filter>源文件\Simulation</Filter>
+      <Filter>源文件\EasyAlg\Simulation</Filter>
     </ClCompile>
     <ClCompile Include="69. Sqrt(x).cpp">
-      <Filter>源文件\Math</Filter>
+      <Filter>源文件\SpecialAlg\Math</Filter>
     </ClCompile>
     <ClCompile Include="70. Climbing Stairs.cpp">
-      <Filter>源文件\DP</Filter>
+      <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
     <ClCompile Include="71. Simplify Path.cpp">
-      <Filter>源文件\Stack</Filter>
+      <Filter>源文件\CommonAlg\Stack</Filter>
     </ClCompile>
     <ClCompile Include="72. Edit Distance.cpp">
-      <Filter>源文件\DP</Filter>
+      <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
     <ClCompile Include="73. Set Matrix Zeroes.cpp">
-      <Filter>源文件\Simulation</Filter>
+      <Filter>源文件\EasyAlg\Simulation</Filter>
     </ClCompile>
     <ClCompile Include="74. Search a 2D Matrix.cpp">
-      <Filter>源文件\BinarySearch</Filter>
+      <Filter>源文件\CommonAlg\BinarySearch</Filter>
     </ClCompile>
     <ClCompile Include="75. Sort Colors.cpp">
-      <Filter>源文件\Special</Filter>
+      <Filter>源文件\SpecialAlg\Special</Filter>
+    </ClCompile>
+    <ClCompile Include="76. Minimum Window Substring.cpp">
+      <Filter>源文件\CommonAlg\SlidingWindow</Filter>
+    </ClCompile>
+    <ClCompile Include="77. Combinations.cpp">
+      <Filter>源文件\CommonAlg\BackTrack</Filter>
+    </ClCompile>
+    <ClCompile Include="78. Subsets.cpp">
+      <Filter>源文件\SpecialAlg\BitOperation</Filter>
+    </ClCompile>
+    <ClCompile Include="79. Word Search.cpp">
+      <Filter>源文件\CommonAlg\DFS</Filter>
+    </ClCompile>
+    <ClCompile Include="80. Remove Duplicates from Sorted Array II.cpp">
+      <Filter>源文件\EasyAlg\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="81. Search in Rotated Sorted Array II.cpp">
+      <Filter>源文件\CommonAlg\BinarySearch</Filter>
+    </ClCompile>
+    <ClCompile Include="82. Remove Duplicates from Sorted List II.cpp">
+      <Filter>源文件\SpecialAlg\ListNode</Filter>
+    </ClCompile>
+    <ClCompile Include="83. Remove Duplicates from Sorted List.cpp">
+      <Filter>源文件\SpecialAlg\ListNode</Filter>
+    </ClCompile>
+    <ClCompile Include="84. Largest Rectangle in Histogram.cpp">
+      <Filter>源文件\CommonAlg\Stack</Filter>
+    </ClCompile>
+    <ClCompile Include="85. Maximal Rectangle.cpp">
+      <Filter>源文件\CommonAlg\Stack</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
