--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -164,6 +164,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="100. Same Tree.cpp" />
+    <ClCompile Include="101. symmetric-tree.cpp" />
+    <ClCompile Include="102. binary-tree-level-order-traversal.cpp" />
+    <ClCompile Include="103. binary-tree-zigzag-level-order-traversal.cpp" />
+    <ClCompile Include="104. maximum-depth-of-binary-tree.cpp" />
+    <ClCompile Include="105. construct-binary-tree-from-preorder-and-inorder-traversal.cpp" />
+    <ClCompile Include="106. construct-binary-tree-from-inorder-and-postorder-traversal.cpp" />
+    <ClCompile Include="107. binary-tree-level-order-traversal-ii.cpp" />
+    <ClCompile Include="108. convert-sorted-array-to-binary-search-tree.cpp" />
+    <ClCompile Include="109. convert-sorted-list-to-binary-search-tree.cpp" />
+    <ClCompile Include="110. balanced-binary-tree.cpp" />
     <ClCompile Include="51. N-Queens.cpp" />
     <ClCompile Include="52. N-Queens II.cpp" />
     <ClCompile Include="53. Maximum Subarray.cpp" />
