--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -284,5 +284,35 @@
     <ClCompile Include="110. balanced-binary-tree.cpp">
       <Filter>源文件\SpecialAlg\BinaryTree</Filter>
     </ClCompile>
+    <ClCompile Include="111. minimum-depth-of-binary-tree.cpp">
+      <Filter>源文件\SpecialAlg\BinaryTree</Filter>
+    </ClCompile>
+    <ClCompile Include="112. path-sum.cpp">
+      <Filter>源文件\SpecialAlg\BinaryTree</Filter>
+    </ClCompile>
+    <ClCompile Include="113. path-sum-ii.cpp">
+      <Filter>源文件\SpecialAlg\BinaryTree</Filter>
+    </ClCompile>
+    <ClCompile Include="114. flatten-binary-tree-to-linked-list.cpp">
+      <Filter>源文件\SpecialAlg\BinaryTree</Filter>
+    </ClCompile>
+    <ClCompile Include="115. distinct-subsequences.cpp">
+      <Filter>源文件\CommonAlg\DP</Filter>
+    </ClCompile>
+    <ClCompile Include="116. populating-next-right-pointers-in-each-node.cpp">
+      <Filter>源文件\SpecialAlg\BinaryTree</Filter>
+    </ClCompile>
+    <ClCompile Include="117. populating-next-right-pointers-in-each-node-ii.cpp">
+      <Filter>源文件\SpecialAlg\BinaryTree</Filter>
+    </ClCompile>
+    <ClCompile Include="118. pascals-triangle.cpp">
+      <Filter>源文件\EasyAlg\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="119. pascals-triangle-ii.cpp">
+      <Filter>源文件\EasyAlg\Simulation</Filter>
+    </ClCompile>
+    <ClCompile Include="120. triangle.cpp">
+      <Filter>源文件\CommonAlg\DP</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
