--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -184,11 +184,12 @@
     <ClCompile Include="118. pascals-triangle.cpp" />
     <ClCompile Include="119. pascals-triangle-ii.cpp" />
     <ClCompile Include="120. triangle.cpp" />
+    <ClCompile Include="121. best-time-to-buy-and-sell-stock.cpp" />
+    <ClCompile Include="122. best-time-to-buy-and-sell-stock-ii.cpp" />
+    <ClCompile Include="123. best-time-to-buy-and-sell-stock-iii.cpp" />
+    <ClCompile Include="124. binary-tree-maximum-path-sum.cpp" />
+    <ClCompile Include="125. valid-palindrome.cpp" />
     <ClCompile Include="51. N-Queens.cpp" />
-    <ClCompile Include="5189. maximum-number-of-balloons.cpp" />
-    <ClCompile Include="5190. reverse-substrings-between-each-pair-of-parentheses.cpp" />
-    <ClCompile Include="5191. k-concatenation-maximum-sum.cpp" />
-    <ClCompile Include="5192. critical-connections-in-a-network.cpp" />
     <ClCompile Include="52. N-Queens II.cpp" />
     <ClCompile Include="53. Maximum Subarray.cpp" />
     <ClCompile Include="54. Spiral Matrix.cpp" />
