--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -195,16 +195,18 @@
     <ClCompile Include="129. sum-root-to-leaf-numbers.cpp" />
     <ClCompile Include="130. surrounded-regions.cpp" />
     <ClCompile Include="131. palindrome-partitioning.cpp" />
-    <ClCompile Include="5071. find-smallest-common-element-in-all-rows.cpp" />
-    <ClCompile Include="5072. how-many-apples-can-you-put-into-the-basket.cpp" />
-    <ClCompile Include="5073. minimum-knight-moves.cpp" />
-    <ClCompile Include="5091. minimum-time-to-build-blocks.cpp" />
+    <ClCompile Include="132. palindrome-partitioning-ii.cpp" />
+    <ClCompile Include="133. clone-graph.cpp" />
+    <ClCompile Include="134. gas-station.cpp" />
+    <ClCompile Include="135. candy.cpp" />
+    <ClCompile Include="136. single-number.cpp" />
+    <ClCompile Include="137. single-number-ii.cpp" />
+    <ClCompile Include="138. copy-list-with-random-pointer.cpp" />
+    <ClCompile Include="139. word-break.cpp" />
+    <ClCompile Include="140. word-break-ii.cpp" />
+    <ClCompile Include="141. linked-list-cycle.cpp" />
     <ClCompile Include="51. N-Queens.cpp" />
-    <ClCompile Include="5197. minimum-absolute-difference.cpp" />
-    <ClCompile Include="5198. ugly-number-iii.cpp" />
-    <ClCompile Include="5199. smallest-string-with-swaps.cpp" />
     <ClCompile Include="52. N-Queens II.cpp" />
-    <ClCompile Include="5200. sort-items-by-groups-respecting-dependencies.cpp" />
     <ClCompile Include="53. Maximum Subarray.cpp" />
     <ClCompile Include="54. Spiral Matrix.cpp" />
     <ClCompile Include="55. Jump Game.cpp" />
