--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -344,32 +344,38 @@
     <ClCompile Include="130. surrounded-regions.cpp">
       <Filter>源文件\CommonAlg\DFS/BFS</Filter>
     </ClCompile>
+    <ClCompile Include="141. linked-list-cycle.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
     <ClCompile Include="131. palindrome-partitioning.cpp">
-      <Filter>源文件</Filter>
+      <Filter>源文件\CommonAlg\BackTrack</Filter>
     </ClCompile>
-    <ClCompile Include="5072. how-many-apples-can-you-put-into-the-basket.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="132. palindrome-partitioning-ii.cpp">
+      <Filter>源文件\CommonAlg\DP</Filter>
     </ClCompile>
-    <ClCompile Include="5073. minimum-knight-moves.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="133. clone-graph.cpp">
+      <Filter>源文件\CommonAlg\DFS/BFS</Filter>
     </ClCompile>
-    <ClCompile Include="5071. find-smallest-common-element-in-all-rows.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="134. gas-station.cpp">
+      <Filter>源文件\CommonAlg\Greedy</Filter>
     </ClCompile>
-    <ClCompile Include="5091. minimum-time-to-build-blocks.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="135. candy.cpp">
+      <Filter>源文件\CommonAlg\Greedy</Filter>
     </ClCompile>
-    <ClCompile Include="5197. minimum-absolute-difference.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="136. single-number.cpp">
+      <Filter>源文件\SpecialAlg\BitOperation</Filter>
     </ClCompile>
-    <ClCompile Include="5198. ugly-number-iii.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="137. single-number-ii.cpp">
+      <Filter>源文件\SpecialAlg\BitOperation</Filter>
     </ClCompile>
-    <ClCompile Include="5199. smallest-string-with-swaps.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="138. copy-list-with-random-pointer.cpp">
+      <Filter>源文件\SpecialAlg\ListNode</Filter>
     </ClCompile>
-    <ClCompile Include="5200. sort-items-by-groups-respecting-dependencies.cpp">
-      <Filter>源文件</Filter>
+    <ClCompile Include="139. word-break.cpp">
+      <Filter>源文件\CommonAlg\DP</Filter>
+    </ClCompile>
+    <ClCompile Include="140. word-break-ii.cpp">
+      <Filter>源文件\CommonAlg\DFS/BFS</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
