--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -205,6 +205,16 @@
     <ClCompile Include="139. word-break.cpp" />
     <ClCompile Include="140. word-break-ii.cpp" />
     <ClCompile Include="141. linked-list-cycle.cpp" />
+    <ClCompile Include="142. linked-list-cycle-ii.cpp" />
+    <ClCompile Include="143. reorder-list.cpp" />
+    <ClCompile Include="144. binary-tree-preorder-traversal.cpp" />
+    <ClCompile Include="145. binary-tree-postorder-traversal.cpp" />
+    <ClCompile Include="146. lru-cache.cpp" />
+    <ClCompile Include="147. insertion-sort-list.cpp" />
+    <ClCompile Include="148. sort-list.cpp" />
+    <ClCompile Include="149. max-points-on-a-line.cpp" />
+    <ClCompile Include="150. evaluate-reverse-polish-notation.cpp" />
+    <ClCompile Include="151. reverse-words-in-a-string.cpp" />
     <ClCompile Include="51. N-Queens.cpp" />
     <ClCompile Include="52. N-Queens II.cpp" />
     <ClCompile Include="53. Maximum Subarray.cpp" />
